--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -47,16 +47,16 @@
 								<table class="table">
 									<tbody>
 										<tr>
-											<td class="cart_total_label">Cart Subtotal</td>
-											<td class="cart_total_amount"></td>
+											<td class="cart_total_label">Cart Subtotal :</td>
+											<td class="cart_total_amount1"></td>
 										</tr>
 										<tr>
-											<td class="cart_total_label">Shipping</td>
-											<td class="cart_total_amount">Free Shipping</td>
+											<td class="cart_total_label">Shipping :</td>
+											<td class="cart_total_amount2"></td>
 										</tr>
 										<tr>
-											<td class="cart_total_label">Total</td>
-											<td class="cart_total_amount">
+											<td class="cart_total_label">Total :</td>
+											<td class="cart_total_amount3">
 												<strong></strong>
 											</td>
 										</tr>
