Wish list version Javascript

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 	{% include "page_head/page_head.html.twig" with {'page_name': 'Cart'} %}
-	<div class="main_content" data-cart="{{ cart_json }}">
+	<div class="main_content cart_content" data-cart="{{ cart_json }}">
 		<div class="section">
 			<div class="container">
 				<div class="row">
