creation du CRUD des adresses et affichage sur le compte

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccountController!
+{% block title %}Ecommerce  | Your account
 {% endblock %}
 
 {% block body %}
@@ -118,38 +118,26 @@
 							</div>
 							<div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
 								<div class="row">
-									<div class="col-lg-6">
-										<div class="card mb-3 mb-lg-0">
-											<div class="card-header">
-												<h3>Billing Address</h3>
-											</div>
-											<div class="card-body">
-												<address>House #15<br>Road #1<br>Block #C
-													<br>Angali
-													<br>
-													Vedora
-													<br>1212</address>
-												<p>New York</p>
-												<a href="#" class="btn btn-fill-out">Edit</a>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-6">
-										<div class="card">
-											<div class="card-header">
-												<h3>Shipping Address</h3>
-											</div>
-											<div class="card-body">
-												<address>House #15<br>Road #1<br>Block #C
-													<br>Angali
-													<br>
-													Vedora
-													<br>1212</address>
-												<p>New York</p>
-												<a href="#" class="btn btn-fill-out">Edit</a>
+									{% for address in addresses %}
+										<div class="col-lg-6">
+											<div class="card mb-3 mb-lg-0">
+												<div class="card-header">
+													<h3>{{ address.addressType }}
+														Address</h3>
+												</div>
+												<div class="card-body">
+													<address>
+														{{ address.name }}<br>
+														{{ address.street }}<br>
+														{{ address.codePostal }}<br>
+														{{ address.city}}<br>
+														{{ address.state}}<br>
+														{{ address.moreDetails}}<br></address>
+													<a href="#" class="btn btn-fill-out">Edit</a>
+												</div>
 											</div>
 										</div>
-									</div>
+									{% endfor %}
 								</div>
 							</div>
 							<div class="tab-pane fade" id="account-detail" role="tabpanel" aria-labelledby="account-detail-tab">
