--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -45,17 +45,17 @@
 								</li>
 							{% endfor %}
 							{# <li>
-																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
-																																																																																																																																																																																																																									</li>
-																																																																																																																																																																																																																									<li>
-																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
-																																																																																																																																																																																																																									</li>
-																																																																																																																																																																																																																									<li>
-																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
-																																																																																																																																																																																																																									</li>
-																																																																																																																																																																																																																									<li>
-																																																																																																																																																																																																																										<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
-																																																																																																																																																																																																																									</li> #}
+																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
+																																																																																																																																																																																																																																							</li>
+																																																																																																																																																																																																																																							<li>
+																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
+																																																																																																																																																																																																																																							</li>
+																																																																																																																																																																																																																																							<li>
+																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
+																																																																																																																																																																																																																																							</li>
+																																																																																																																																																																																																																																							<li>
+																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
+																																																																																																																																																																																																																																							</li> #}
 						</ul>
 					</div>
 				</div>
@@ -137,21 +137,22 @@
 				<div class="col-md-6">
 					<ul class="footer_payment text-center text-lg-end d-flex gap-2 justify-content-end">
 						<li>
-							<a href="#"><img src="assets/images/visa.png" alt="visa"></a>
+							<a href="#"><img src="{{ asset('assets/images/visa.png') }}" alt="visa"></a>
 						</li>
 						<li>
-							<a href="#"><img src="assets/images/discover.png" alt="discover"></a>
+							<a href="#"><img src="{{ asset('assets/images/discover.png') }}" alt="discover"></a>
 						</li>
 						<li>
-							<a href="#"><img src="assets/images/master_card.png" alt="master_card"></a>
+							<a href="#"><img src="{{ asset('assets/images/master_card.png') }}" alt="master_card"></a>
 						</li>
 						<li>
-							<a href="#"><img src="assets/images/paypal.png" alt="paypal"></a>
+							<a href="#"><img src="{{ asset('assets/images/paypal.png') }}" alt="paypal"></a>
 						</li>
 						<li>
-							<a href="#"><img src="assets/images/amarican_express.png" alt="amarican_express"></a>
+							<a href="#"><img src="{{ asset('assets/images/amarican_express.png') }}" alt="amarican_express"></a>
 						</li>
 					</ul>
+
 				</div>
 			</div>
 		</div>
